[project]
name = "maksukortti"
version = "0.1.0"
description = ""
authors = [
    {name = "Matias Jerkkola",email = "matsu.jerkkola@gmail.com"}
]
requires-python = "^3.12"
dependencies = [
]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
